2015-02-23  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc int] Add abstraction: zonkable

	* doc/guile-pg.texi (zonkable): New @macro.

2015-01-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[boot] Use ‘AC_CONFIG_MACRO_DIR’.

	Actually, autoreconf suggests ‘AC_CONFIG_MACRO_DIRS’, but that's
	only available w/ Autoconf 2.70, which is not yet released.

	* configure.ac: ...here, immediately following ‘AC_INIT’.

2015-01-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[omm] Allow string COMPOSED for ‘define-db-col-type-array-variant’.

	* doc/Makefile.am (coltypes.texi): Update to handle string COMPOSED.

2015-01-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Generate leading "*" for array types.

	This is a conceptual continuation of 2015-01-06,
	"Convert array type names from trailing "[]" to leading "*"".

	* doc/Makefile.am (coltypes.texi): Update sed script to
	output array type names w/ leading "*" instead of trailing "[]".

2015-01-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Convert array type names from trailing "[]" to leading "*".

	* doc/ref.texh (Consulting Existing Converters)
	(Column Definitions, Result Transforms)
	(Single-Table Abstraction): ...here, in examples and blurbs.

2015-01-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Move, update objectifier example.

	* doc/ref.texh (Consulting Existing Converters):
	Move objectifier example prior to "obsolete interface" heading;
	update to use ‘type-objectifier’; add heading "example".

2015-01-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Index ‘define-db-col-type-array-variant’ errors.

	Omission from 2015-01-03, "Make
	‘define-db-col-type-array-variant’ strict".

	* doc/ref.texh (Defining New Converters):
	Add @bummer for ‘define-db-col-type-array-variant’.

2015-01-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[omm] Add (database postgres-types) proc: register-array-variant

	* doc/ref.texh (Octet Molding/Mashing): Update naming
	intricacies blurb and table of examples.